--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ body {
   color: #fffffe;
 }
 
-#form1 {
+#kelilingForm , #luasForm {
   text-align: center;
   border-radius: 10px;
   margin: 1rem auto;
